# kestrel-hunting

./: .gitignore  README.md  pyproject.toml
kestrel/: __init__.py  api.py  cli.py  config.py
kestrel/core/: engine.py  models.py  parser.py  scorer.py
kestrel/core/rules/: __init__.py  correctness.py  documentation.py  performance.py  sentinel.py  structure.py
kestrel/environments/: registry.py
kestrel/llm/: client.py  logic_review.py  rewriter.py  test_generator.py
kestrel/output/: annotator.py  formats.py  report.py
tests/unit/: test_api.py  test_cli.py  test_config.py
tests/unit/core/: test_engine.py  test_models.py  test_parser.py  test_scorer.py
tests/unit/environments/: test_registry.py
tests/unit/llm/: test_client.py  test_logic_review.py  test_rewriter.py  test_test_generator.py
tests/unit/output/: test_annotator.py  test_formats.py  test_report.py
tests/unit/rules/: test_correctness.py  test_documentation.py  test_performance.py  test_sentinel.py  test_structure.py
