[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kestrel-kql"
version = "0.1.0"
description = "KQL detection rule analyzer for Microsoft Sentinel and Defender XDR"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "anthropic>=0.40",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
kestrel = "kestrel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kestrel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
